@@ -91,6 +91,9 @@ Working version
   Unix.SO_ERROR.
   (Nicolás Ojeda Bär, review by Damien Doligez)
 
+- #10986: Add Scqnf.sscanf_opt, Scanf.bscanf_opt and Scanf.scanf_opt.
+  (Nicolás Ojeda Bär, review by Florian Angeletti and Gabriel Scherer)
+
 ### Other libraries:
 
 * #9071, #9100, #10935: Reimplement `Thread.exit()` as raising the
